--- a/LITERAS/docker-compose.yml
+++ b/LITERAS/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    container_name: academic-search-bot
+    container_name: LITERAS
     ports:
       - "8000:8000"
     env_file:
